force-app/main/default/objects/Sales_Cycle_Log_Action__c/Sales_Cycle_Log_Action__c.object-meta.xml
<CustomObject>
    <label>Sales Cycle Log Action</label>
    <nameField>
        <displayFormat>SCLA-{00000}</displayFormat>
        <label>Sales Cycle Log Action</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Cycle Log Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>