force-app/main/default/objects/Sales_Cycle_Log_Action__c/fields/Created_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Role__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <label>Created By Role</label>
    <type>Text</type>
</CustomField>