force-app/main/default/objects/Sales_Cycle_Log_Action__c/fields/Previous_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Lead_Status__c</fullName>
    <label>Previous Lead Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>