force-app/main/default/objects/Sales_Cycle_Log_Action__c/fields/Sales_Cycle_Log__c.field-meta.xml
<CustomField>
    <fullName>Sales_Cycle_Log__c</fullName>
    <label>Sales Cycle Log</label>
    <referenceTo>Sales_Cycle_Log__c</referenceTo>
    <relationshipLabel>Sales Cycle Log Actions</relationshipLabel>
    <relationshipName>Sales_Cycle_Log_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>