force-app/main/default/objects/Sales_Cycle_Log_Action__c/fields/Time_Between_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Time_Between_Lead_Status__c</fullName>
    <label>Time Between Lead Status</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>