force-app/main/default/objects/Sales_Cycle_Log_Action__c/fields/Time_to_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Conversion__c</fullName>
    <formula>IF((Lead_Status__c = &#39;Sales Qualified Lead&#39;), 
DATETIMEVALUE(Sales_Cycle_Log__r.Lead__r.ConvertedDate) - CreatedDate, NULL)</formula>
    <label>Time to Conversion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>